# ebs_github

./: .doc-discovery-duplicates.txt  .doc-discovery-orphans.py  .doc-discovery-orphans.txt  .gitignore  .ssot-align.yaml  .team  CI_GATE_INTEGRATION_HANDOFF.md  CLAUDE.md  CONTRIBUTING.md  DEV_MARKER.md  INFRA_ALIGNMENT_HANDOFF.md  README.md  START_HERE.md  docker-compose.yml
team2-backend/: .coverage  .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.cluster.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
team2-backend/migrations/: README.md  STRATEGY.md  env.py
team2-backend/migrations/versions/: 0001_baseline.py  0002_configs_scope.py  0003_blind_detail_type_check.py  0004_player_move_status_check.py  0005_decks_and_settings_kv.py  0007_sandbox_seed_source_check.py  0008_hands_filter_indexes.py  0009_session_multi_device.py  0010_brand_packs.py  0011_chip_count_snapshots.py
team2-backend/qa/: spec-gap.md
team2-backend/seed/: README.md
team2-backend/seeds/: __init__.py  admin.py
team2-backend/specs/back-office/: BO-01-overview.md  BO-02-sync-protocol.md  BO-03-operations.md  PRD-EBS_BackOffice.md  README.md
team2-backend/specs/impl/: IMPL-00-dev-setup.md  IMPL-01-tech-stack.md  IMPL-02-project-structure.md  IMPL-03-state-management.md  IMPL-04-routing.md  IMPL-05-dependency-injection.md  IMPL-06-error-handling.md  IMPL-07-logging.md  IMPL-08-testing-strategy.md  IMPL-09-build-deployment.md  IMPL-10-nfr.md  README.md
team2-backend/src/: main.py
team2-backend/src/adapters/: __init__.py  event_flight_status.py  wsop_auth.py  wsop_game_type.py
team2-backend/src/app/: config.py  database.py
team2-backend/src/db/: enums.py  init.sql
team2-backend/src/middleware/: idempotency.py  rbac.py  security.py
team2-backend/src/models/: audit_event.py  audit_log.py  base.py  blind_structure.py  brand_pack.py  chip_count_snapshot.py  competition.py  config.py  hand.py  payout_structure.py  schemas.py  skin.py  table.py  user.py
team2-backend/src/observability/: circuit_breaker.py  distributed_lock.py
team2-backend/src/repositories/: event_repository.py  idempotency_store.py
team2-backend/src/routers/: audit.py  auth.py  blind_structures.py  brand_packs.py  competitions.py  configs.py  decks.py  event_flights.py  hands.py  payout_structures.py  players.py  replay.py  reports.py  series.py  (+6 more)
team2-backend/tests/: conftest.py  test_audit.py  test_audit_events.py  test_auth.py  test_auth_security.py  test_auth_service_extended.py  test_blacklist_propagation.py  test_blind_levels_crud.py  test_brand_packs.py  test_break_lifecycle.py  test_ccr050_flight_clock.py  test_chip_count_state.py  test_chip_count_webhook.py  test_circuit_breaker.py  test_concurrent_sessions.py  test_config_service.py  test_decks_inmemory.py  test_distributed_lock.py  test_event_flight_status.py  test_event_flights.py  test_flat_endpoints.py  test_force_logout.py  test_hands_api.py  test_health.py  test_idempotency.py  test_migrations_runtime.py  test_players.py  test_players_api.py  test_publishers.py  test_replay.py  test_reports_basic.py  test_routers_2_6_extended.py  test_security_middleware.py  test_series.py  test_series_service_extended.py  test_services_2_4b_extended.py  test_session_2_7_extended.py  test_settings_kv.py  test_sg008b_extensions.py  test_ssot_phase_c_quick.py  (+14 more)
team2-backend/tools/: init_db.py  seed_admin.py  seed_demo_data.py  seed_multi_hand_demo.py  ssot_route_diff.py  wsop_live_mock_webhook.py
(+3502 files in other folders)
