[project]
name = "ebs-backend"
version = "0.1.0"
description = "EBS Back Office — REST API + WebSocket + DB"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # 2026-04-29 (PR #70) — bcrypt explicit pin <4.0 to fix passlib startup conflict.
    # Background: passlib 1.7.x calls detect_wrap_bug() at backend init, which
    # internally calls bcrypt.hashpw with a 255-byte test secret. bcrypt 4.x raises
    # ValueError on >72 bytes (no silent truncate); bcrypt 3.x silently truncates.
    # → bo container Restarting loop with `ValueError: password cannot be longer
    #   than 72 bytes` (logs from 2026-04-29 user diagnosis).
    # 2026-05-06: bcrypt 5.0 도 동일 ValueError 발생 (passlib 1.7.4 detect_wrap_bug
    # 의 255-byte test 가 bcrypt 4.0+ 모두에서 reject). <4.0 으로 strict pin.
    # Reference: https://github.com/pyca/bcrypt/issues/684
    "bcrypt>=3.2.0,<4.0.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "alembic>=1.14.0",
    # 2026-05-03 (R2 OWASP audit) — explicit pin transitive deps to fix CVE.
    # python-multipart 0.0.19 → CVE-2026-24486, CVE-2026-40347 (file upload paths)
    # werkzeug         3.1.5  → CVE-2026-27199 (transitive, defensive pin)
    # python-dotenv    1.0.1  → CVE-2026-28684 (parsing edge case)
    "python-multipart>=0.0.22",
    "werkzeug>=3.1.6",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "fakeredis[json]>=2.25.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
